# dmarc_checker

./: .gitignore  Cargo.toml  README.md
domain_lists/: uk_government_parsed.txt  uk_government_results.csv  uk_government_results_parsed.xlsx  usa_government_parsed.txt  usa_government_results.csv  usa_government_results_parsed.xlsx
src/: main.rs  parse.rs  query.rs  util.rs  utils.rs
