[package]
name = "dmarc"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
clap = "2.33.0"
serde =  {version = "1.0", features = ["derive"] }
env_logger = "0.7.1"
log = "0.4.11"
trust-dns-client = "0.20.1"
trust-dns-proto = "0.20.1"